test/error/ArrayStgHugeLength.fu
public class Test
{
	int[10000000000] Array; //ERROR: Integer too big
}
